k8s-manifests/manifest-azure/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-services-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: data-collector.dash-gtd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: data-collector
                port:
                  number: 8000
          - path: /health
            pathType: Exact
            backend:
              service:
                name: data-collector
                port:
                  number: 8000
    - host: data-api.dash-gtd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: data-api-service
                port:
                  number: 8006
    - host: data-processor.dash-gtd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: data-processor
                port:
                  number: 8001
    - host: database-writer.dash-gtd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: database-writer
                port:
                  number: 8002
    - host: file-writer.dash-gtd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: file-writer
                port:
                  number: 8003
    - host: grafana.dash-gtd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 3000
    - host: prometheus.dash-gtd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-kube-prometheus-prometheus
                port:
                  number: 9090
    - host: frontend.dash-gtd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 4200
  defaultBackend:
    service:
      name: data-collector
      port:
        number: 8000
